force-app/main/default/objects/Placement_Team_Member__c/Placement_Team_Member__c.object-meta.xml
<CustomObject>
    <description>ECMv1 Job Placement Domain Template</description>
    <label>Placement Team Member</label>
    <nameField>
        <displayFormat>PlacementTeamMbr-{0000}</displayFormat>
        <label>Placement Team Member #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Placement Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>