force-app/main/default/objects/Placement_Team_Member__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ECMv1 Job Placement Domain Template</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Placement Team Members</relationshipLabel>
    <relationshipName>Placement_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>