force-app/main/default/objects/Placement_Team_Member__c/fields/Job_Placement__c.field-meta.xml
<CustomField>
    <fullName>Job_Placement__c</fullName>
    <description>ECMv1 Job Placement Domain Template</description>
    <label>Job Placement</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Placement Team Members</relationshipLabel>
    <relationshipName>Placement_Team_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>