force-app/main/default/objects/Placement_Team_Member__c/fields/Staff__c.field-meta.xml
<CustomField>
    <fullName>Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ECMv1 Job Placement Domain Template</description>
    <label>Staff</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Placement_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>